[package]
name = "taspromto"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
rumqttc = "0.23.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
dashmap = "5.5.3"
jzon = "0.12.5"
warp = "0.3.6"
dotenvy = "0.15.7"
ctrlc = { version = "3.4.2", features = ["termination"] }
color-eyre = "0.6.2"
async-stream = "0.3.5"
pin-utils = "0.1.0"
hostname = "0.3.1"
tokio-stream = "0.1.14"

[profile.release]
lto = true
