[package]
name = "taspromto"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
dashmap = "5.5.3"
jzon = "0.12.5"
warp = "0.3.7"
dotenvy = "0.15.7"
ctrlc = { version = "3.4.4", features = ["termination"] }
color-eyre = "0.6.3"
async-stream = "0.3.5"
pin-utils = "0.1.0"
hostname = "0.4.0"
tokio-stream = "0.1.15"
serde = { version = "1.0.200", features = ["derive"] }

[profile.release]
lto = true
