[package]
name = "taspromto"
version = "0.2.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
rust-version = "1.74.1"

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
dashmap = "6.1.0"
jzon = "0.12.5"
warp = "0.3.7"
dotenvy = "0.15.7"
ctrlc = { version = "3.4.5", features = ["termination"] }
color-eyre = "0.6.3"
async-stream = "0.3.6"
pin-utils = "0.1.0"
hostname = "0.4.0"
tokio-stream = { version = "0.1.16", features = ["net"] }
serde = { version = "1.0.213", features = ["derive"] }
secretfile = "0.1.0"
toml = "0.8.19"
clap = { version = "4.5.20", features = ["derive"] }

[profile.release]
lto = true
